# once_cell-sgx

./: .drone.yml  Cargo.toml
sgx/once_cell-sgx-test/: Cargo.toml  Makefile
sgx/once_cell-sgx-test/app/: Cargo.toml  build.rs
sgx/once_cell-sgx-test/enclave/: Cargo.toml  Makefile
sgx/once_cell-sgx-test/enclave/src/: lib.rs  tests.rs
src/: imp_std.rs  lib.rs
