[package]
name = "app"
version = "1.0.0"
authors = ["Baidu"]
build = "build.rs"

[dependencies]
sgx_types = { tag = "v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_urts = { tag = "v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
dirs = "1.0.2"
