[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
once_cell = { path = "../../.." }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { tag = "v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tstd = { tag = "v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tunittest = { tag = "v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
